Fix comment submit top margin on Safari

--- a/src/Styles/_button.inline.scss
+++ b/src/Styles/_button.inline.scss
@@ -25,11 +25,5 @@
 
 .button-right {
   min-width: 6.4em;
-  margin-top: 2px;
   float: right;
-}
-@-moz-document url-prefix() {
-  .button-right {
-    margin-top: 3px;
-  }
 }
