--- a/src/Styles/_comments.scss
+++ b/src/Styles/_comments.scss
@@ -273,6 +273,7 @@
   button[type="submit"] {
     position: absolute;
     max-height: 27px;
+    margin-top: 0;
     width: 6.25em;
     top: 8px;
     right: 0;
